--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html data-ng-app=''>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='' name='description'>
+    <meta content='FQ400' name='author'>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
+    <title>
+      Bootstrap by FQ400
+    </title>
+    <link href='./stylesheets/application.css' rel='stylesheet'>
+    <script src='./javascripts/angular.min.js'></script>
+    <script src='./javascriptss/application.js'></script>
+  </head>
   <body>
-    123
+    <div data-ng-controller='FooController'>
+      <p data-ng-model='foo'>
+        {{foo.bar}}
+      </p>
+      <div class='test'>
+        TEST
+      </div>
+    </div>
   </body>
 </html>
