--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app=''>
+<html data-ng-app='' lang='de'>
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
@@ -11,7 +11,7 @@
     </title>
     <link href='./stylesheets/application.css' rel='stylesheet'>
     <script src='./javascripts/angular.min.js'></script>
-    <script src='./javascriptss/application.js'></script>
+    <script src='./javascripts/application.js'></script>
   </head>
   <body>
     <div data-ng-controller='FooController'>
